@@ -6021,6 +6021,8 @@ A non-nil CURRENT-ONLY argument means save only current buffer.  */)
 
   /* Prevent another auto save till enough input events come in.  */
   record_auto_save ();
+  if (stream != NULL)
+    fclose (stream);
 
   if (auto_saved && NILP (no_message))
     {
@@ -6683,8 +6685,9 @@ or local variable spec of the tailing lines with `coding:' tag.  */);
 
   DEFVAR_LISP ("after-insert-file-functions", &Vafter_insert_file_functions,
 	       doc: /* A list of functions to be called at the end of `insert-file-contents'.
-Each is passed one argument, the number of characters inserted.
-It should return the new character count, and leave point the same.
+Each is passed one argument, the number of characters inserted,
+with point at the start of the inserted text.  Each function
+should leave point the same, and return the new character count.
 If `insert-file-contents' is intercepted by a handler from
 `file-name-handler-alist', that handler is responsible for calling the
 functions in `after-insert-file-functions' if appropriate.  */);
